# settingstest

./: BUILD  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE  README.md  WORKSPACE  build_with_spack_cmake.sh
config/: bad.json  base.json  missing.json  two.json
config/subconfig/: one.json
json/: base.json
json/subjson/: one.json
src/: main.cc
